--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 body {
   /* font-family: 'Josefin Sans'; */
   font-family: 'Lato', sans-serif;
-  background-color: #FFFAFB;
+  /* background-color: #FFFAFB; */
 }
 * {
   padding: 0px;
