--- a/src/components/card.css
+++ b/src/components/card.css
@@ -40,13 +40,13 @@
   margin-top: 8em;
   height: 20vh;
   width: 80%;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; */
   z-index: 2;
   position: absolute;
   background-color: rgb(255 255 255);
   display: flex;
-  
+  box-shadow: -1px 1px 30px 1px rgba(49, 49, 49, 0.1);
   justify-content: center;
   border-radius: 20px;
 }
